server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  type: LoadBalancer
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "22"
      port: 22
      targetPort: 22
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}
